--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "base-project",
+  "name": "guess-who",
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
@@ -13,11 +13,8 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.16.0",
-    "chai": "^3.5.0",
     "grunt-babel": "^6.0.0",
-    "grunt-haml2html": "^0.3.1",
-    "grunt-mocha-test": "^0.13.2",
-    "mocha": "^3.1.2"
+    "grunt-haml2html": "^0.3.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,8 +22,5 @@
   "author": "",
   "license": "ISC",
   "keywords": [],
-  "description": "##1. Install Node [www.nodejs.com](http://www.nodejs.com)",
-  "directories": {
-    "test": "test"
-  }
+  "description": "##1. Install Node [www.nodejs.com](http://www.nodejs.com)"
 }
